Some fixes responses and create account table
