# app/controllers/accountController.js
@@ -1,0 +1,9 @@
+class accountController {
+  static async postAccount(req, res) {
+    res.json({ message: 'Hola mundo' });
+  }
+}
+
+module.exports = {
+  postAccount: accountController.postAccount,
+};
